:lipstick: dev - tidy up visuals on jogger app :lipstick:

--- a/views/friends.html
+++ b/views/friends.html
@@ -49,7 +49,7 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker pt-4 pb-4 bg-indigo-lighter rounded-full uppercase text-base font-semibold">
+        <h3 class="text-black pt-4 pb-4 bg-indigo-lightest rounded-full uppercase text-base font-semibold">
           {{ name }}
         </h3>
             <a class="block no-underline w-24 text-center rounded-full bg-indigo text-white p-2 mt-4 ml-auto hover:bg-indigo-darkest"
@@ -69,7 +69,7 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 pt-10 pb-12 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker ml-6 mr-6 pt-4 pb-4 bg-indigo-lighter rounded-full uppercase text-base font-semibold">
+        <h3 class="text-black ml-6 mr-6 pt-4 pb-4 bg-indigo-lightest rounded-full uppercase text-base font-semibold">
           {{ name }}
         </h3>
       </div>
