--- a/views/timeline.html
+++ b/views/timeline.html
@@ -36,11 +36,11 @@
 
       {{#each usersWithTimes}}
       <div class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-        <h3 class="pt-4 bg-blue-lightest text-black uppercase text-base font-bold">
+        <h3 class="pt-4 bg-blue-lighter text-black uppercase text-base font-bold">
           {{ name }}
           <span class="text-black uppercase text-base font-bold -ml-1">'s</span>
         </h3>
-        <h3 class="pt-4 pb-4 bg-blue-lightest text-grey-darker uppercase text-base font-semibold">Jogger Times
+        <h3 class="pt-4 pb-4 bg-blue-lighter text-black uppercase text-base font-semibold">Jogger Times
         </h3>
         <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
         </section>
@@ -50,17 +50,17 @@
         </h3>
         <p class="text-blue font-semibold text-xl mt-2">
           {{ distance }}
-          <span class="uppercase text-sm text-grey-darker font-semibold -ml-1">
+          <span class="uppercase text-sm text-black font-semibold -ml-1">
             km
           </span>
           in {{ duration }}
-          <span class="uppercase text-sm text-grey-darker font-semibold -ml-1">
+          <span class="uppercase text-sm text-black font-semibold -ml-1">
             hrs
           </span>
         </p>
         <p class="text-purple text-xl mt-1">
           Avg. speed: {{averageSpeed}}
-          <span class="uppercase text-sm text-grey-darker font-semibold -ml-1">
+          <span class="uppercase text-sm text-black font-semibold -ml-1">
             km/hr
           </span>
         </p>
