--- a/views/members.html
+++ b/views/members.html
@@ -48,7 +48,7 @@
         <div
           class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow text-center rounded-lg text-black no-underline"
         >
-          <h3 class="text-grey-darker pt-4 pb-4 bg-orange-lighter rounded-full uppercase text-base font-semibold">
+          <h3 class="text-black pt-4 pb-4 bg-orange-lightest rounded-full uppercase text-base font-semibold">
             {{ name }}
           </h3>
               <a class="block no-underline w-24 text-center rounded-full bg-orange-dark text-white p-2 mt-4 ml-auto hover:bg-orange-darkest"
@@ -69,7 +69,7 @@
         <div
           class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow text-center rounded-lg text-black no-underline"
         >
-          <h3 class="text-grey-darker pt-4 pb-4 bg-orange-lighter rounded-full uppercase text-base font-semibold">
+          <h3 class="text-black pt-4 pb-4 bg-orange-lightest rounded-full uppercase text-base font-semibold">
             {{ name }}
           </h3>
               <a class="block no-underline w-24 text-center rounded-full bg-orange-dark text-white p-2 mt-4 ml-auto hover:bg-orange-darkest"
