:camera_flash: dev - Adding ERD diagram for Jogger App :camera_flash:

--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -13,7 +13,7 @@
 <body class="bg-grey">
   <header class="fixed pin-x pin-t bg-grey-darkest shadow text-white">
     <div class="mx-auto h-16 p-1 flex items-center justify-between" style="width: 1000px">
-      <h2 class="p-4 uppercase bg-black border border-white">Jog Times - Sign In</h2>
+      <h2 class="p-4 uppercase bg-black border border-white">Jogger - Sign In</h2>
     </div>
   </header>
   <main class="h-screen flex flex-col items-center justify-center ">
