--- a/views/timeline.html
+++ b/views/timeline.html
@@ -29,8 +29,8 @@
   <main style="width: 1000px; height: auto" class="mx-auto mt-16 pt-4 flex flex-col justify-center ">
 
     <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
-    
-    <h2 class="ml-8 mr-8 text-center bg-blue-lightest pt-4 pb-4 rounded-full">Jogger Friends Timeline</h2>
+
+    <h2 class="ml-8 mr-8 text-center bg-blue-lightest pt-4 pb-4 rounded-full">Jogger Timeline</h2>
 
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
