--- a/views/create-time.html
+++ b/views/create-time.html
@@ -1,87 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Jog Times - Add New Time</title>
 
-    <!-- Tailwind.css is a CSS library. Read the docs here: -->
-    <!-- https://tailwindcss.com/docs/what-is-tailwind -->
-    <link rel="stylesheet" href="/tailwind.css" />
-  </head>
-  <body class="bg-grey">
-    <header class="fixed pin-x pin-t bg-green shadow text-white">
-      <div
-        class="mx-auto h-16 p-5 flex items-center justify-between"
-        style="width: 1000px"
-      >
-        <h2 class="text-white uppercase no-underline p-4 bg-green-dark border border-white">Jogger - Add Time</h2>
-        <div>
-          Signed in as {{ user.name }} ({{ user.email }})
-          <a
-            href="/sign-out"
-            class="text-white bg-green-dark border border-white rounded-full p-2 no-underline hover:bg-green-darkest ml-4"
-          >
-            Sign Out
-          </a>
-          <a
-            href="/user"
-            class="text-white bg-green-dark border border-white rounded-full p-2 no-underline hover:bg-green-darkest ml-4"
-          >
-            Launchpad
-          </a>
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <title>Jog Times - Add New Time</title>
+
+  <!-- Tailwind.css is a CSS library. Read the docs here: -->
+  <!-- https://tailwindcss.com/docs/what-is-tailwind -->
+  <link rel="stylesheet" href="/tailwind.css" />
+</head>
+
+<body class="bg-grey">
+  <header class="fixed pin-x pin-t bg-green shadow text-white">
+    <div class="mx-auto h-16 p-5 flex items-center justify-between" style="width: 1000px">
+      <h2 class="text-white uppercase no-underline p-4 bg-green-dark border border-white">Jogger - Add Time</h2>
+      <div>
+        Signed in as {{ user.name }} ({{ user.email }})
+        <a href="/sign-out" class="text-white bg-green-dark border border-white rounded-full p-2 no-underline hover:bg-green-darkest ml-4">
+          Sign Out
+        </a>
+        <a href="/user" class="text-white bg-green-dark border border-white rounded-full p-2 no-underline hover:bg-green-darkest ml-4">
+          Launchpad
+        </a>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <main class="h-screen flex flex-col items-center justify-center">
-      <form
-        class="m-4 shadow-lg rounded-lg overflow-hidden w-64 bg-green"
-        method="POST"
-        action="/times/new"
-      >
-        <h1 class="text-2xl text-white bg-black text-center p-4">Add new time</h1>
+  <main class="h-screen flex flex-col items-center justify-center">
+    <form class="m-4 shadow-lg rounded-lg overflow-hidden w-64 bg-green" method="POST" action="/times/new">
+      <h1 class="text-2xl text-white bg-black text-center p-4">Add new time</h1>
 
-        {{#if errorMessage}}
-        <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
-        {{/if}}
+      {{#if errorMessage}}
+      <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
+      {{/if}}
 
-        <label class="m-4 block">
-          Date
-          <input
-            class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="datetime-local"
-            name="startTime"
-            required
-          />
-        </label>
+      <label class="m-4 block">
+        Date
+        <input class="block rounded bg-grey-lightest p-2 mt-2 w-full" type="datetime-local" name="startTime" required />
+      </label>
 
-        <label class="m-4 block">
-          Distance (km)
-          <input
-            class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="float"
-            name="distance"
-            required
-          />
-        </label>
+      <label class="m-4 block">
+        Distance (km)
+        <input class="block rounded bg-grey-lightest p-2 mt-2 w-full" type="float" name="distance" required />
+      </label>
 
-        <label class="m-4 block">
-          Duration (hrs)
-          <input
-            class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="float"
-            name="duration"
-            required
-          />
-        </label>
+      <label class="m-4 block">
+        Duration (hrs)
+        <input class="block rounded bg-grey-lightest p-2 mt-2 w-full" type="float" name="duration" required />
+      </label>
 
-        <button
-          type="submit"
-          class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-dark"
-        >
-          Create Time →
-        </button>
-      </form>
-    </main>
-  </body>
+      <button type="submit" class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-dark">
+        Create Time →
+      </button>
+    </form>
+  </main>
+</body>
+
 </html>
