--- a/views/ranking.html
+++ b/views/ranking.html
@@ -29,13 +29,14 @@
   <main style="width: 1000px; height: auto" class="mx-auto mt-16 pt-4 flex flex-col justify-center ">
 
     <section class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
-    
+
     <h2 class="ml-8 mr-8 text-center bg-teal-lightest pt-4 pb-4 rounded-full">Jogger Rankings</h2>
 
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-indigo-lightest text-black text-center uppercase text-base font-semibold">Total Distance Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-indigo-lightest text-black text-center uppercase text-base font-semibold">Total
+          Distance Ladder
         </h3>
 
         {{#each sortedByDistance}}
@@ -58,7 +59,8 @@
       </div>
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-blue-lightest text-black text-center uppercase text-base font-semibold">Total Time Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-blue-lightest text-black text-center uppercase text-base font-semibold">Total
+          Time Ladder
         </h3>
         {{#each sortedByTime}}
         <div class="w-64 mt-6 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
@@ -80,7 +82,8 @@
       </div>
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-teal-lightest text-black text-center uppercase text-base font-semibold">Average Speed Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-teal-lightest text-black text-center uppercase text-base font-semibold">Average
+          Speed Ladder
         </h3>
         {{#each sortedByAverage}}
         <div class="w-64 mt-6 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
